--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -1,9 +1,90 @@
-.logo {
-    width: 80px;
-    height: 80px;
-    background-size: cover;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Krub', sans-serif;
+    word-spacing: 1px;
+    text-decoration: none;
 }
-
+.heading{
+    width: 100%;
+    margin: 10px;
+}
+.logo {
+    width: 60px;
+    background-size: cover;
+    display: block;
+}
+.content-container{
+    margin: 10px 20vw 50px 20vw;
+    padding: 0 0 10px 10px;
+    border-top: 5px solid #d1fdfd;
+    background: #f5f5f5;
+}
 .info {
+    list-style-type: "→";
+    padding: 0 0 5px 10px;
+    margin-left: 15px;
+}
+h1, h2 {
+    color: #016565;
+    margin: 10px 0 5px 0;
+    justify-self: left;
+}
+ul li {
     list-style-type: none;
+}
+.heading {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    border-top: 5px solid #d1fdfd;
+}
+.navigation-top{
+    display: flex;
+    float: left;
+    position: sticky;
+    margin: 10px 20vw 10px 20vw;
+}
+.links-container{
+    width: 300px;
+    display: flex;
+    padding-left: 20px;
+    justify-content: space-around;
+    list-style: none;
+    align-items: center;
+    text-transform: capitalize;
+}
+.link-item {
+    line-height: 20px;
+    border: transparent;
+    padding: 7px;
+}
+.link-item:hover{
+    border: 1px solid #982525;
+    border-radius: 5px;
+    background-color: #d1fdfd;
+}
+a {
+    cursor: pointer;
+    color: black;
+}
+a:hover {
+    color: #982525;
+}
+.social-link {
+    padding-right: 30px;
+    display: inline;
+}
+.fa{
+    padding-right: 10px;
+}
+.paragraph{
+    padding: 0 10px 10px 0;
+}
+@media screen and (max-width: 850px) {
+    .social-link {
+        display: block;
+        padding-bottom: 5px;
+    }
 }
