--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -17,7 +17,7 @@
     margin-right: 20px;
 }
 .content-container{
-    margin: 20px 20vw 50px 20vw;
+    margin: 20px 18vw 50px 18vw;
     padding: 0 0 10px 10px;
     border-top: 5px solid #d1fdfd;
     background: #f5f5f5;
@@ -27,17 +27,23 @@
     padding-right: 15px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 .info::before {
     content: "→";
-    margin-right: 10px;
+    margin-right: 8px;
 }
 #skills .info {
     display: flow;
 }
+.skills-list {
+    column-count: 2;
+    column-gap: 1em;
+}
 .date {
-    margin-left: auto;
+    margin-left: 0;
+    margin-right: 0.7em;
+    min-width: fit-content;
+    text-align: left;
 }
 h1, h2 {
     color: #016565;
@@ -82,6 +88,20 @@ ul li {
     border-radius: 5px;
     background-color: #d1fdfd;
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1em;
+}
+.grid-item {
+    display: flex;
+    flex-direction: row;
+}
+.one-exp {
+    display: flex;
+    flex-direction: column;
+    padding-left: inherit;
+}
 a {
     cursor: pointer;
     color: black;
@@ -99,9 +119,45 @@ a:hover {
 .paragraph{
     padding: 0 10px 10px 0;
 }
+
+@media screen and (max-width: 1800px) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    }
+}
+@media screen and (max-width: 925px) {
+    .skills-list {
+        column-count: 1;
+    }
+}
 @media screen and (max-width: 850px) {
     .social-link {
         display: block;
         padding-bottom: 5px;
+    }
+}
+@media screen and (max-width: 600px) {
+    #navigation-top {
+        flex-direction: column;
+        align-items: center;
+        min-height: max-content;
+        padding: 15px 0;
+        display: flex;
+        justify-content: flex-start;
+    }
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+    }
+    .link-item {
+        margin-bottom: 0;
+    }
+    .logo {
+        margin-bottom: 0.5em;
+        margin-right: 0;
+    }
+    .content-container{
+        scroll-margin-top: calc(50vw);
     }
 }
