--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -2,35 +2,73 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Krub', sans-serif;
-    word-spacing: 1px;
     text-decoration: none;
 }
+body {
+    font-family: 'Krub', sans-serif;
+    font-size: 1em;
+    word-spacing: 1px;
+}
+#navigation-top{
+    display: flex;
+    position:sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: fit-content;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    border-bottom: 5px solid #d1fdfd;
+    padding: 0.625rem 1.25rem;
+    z-index: 1;
+    overflow: hidden;
+}
+.nav-links{
+    display: flex;
+    gap: 1em;
+    list-style: none;
+    align-items: center;
+    text-transform: capitalize;
+    flex-wrap: wrap;
+}
+.link-item {
+    line-height: 1.25rem;
+    border: transparent;
+    padding: 0.435rem;
+}
+.link-item:hover{
+    border: 1px solid #982525;
+    border-radius: 0.325px;
+    background-color: #d1fdfd;
+}
 .heading{
+    display: flex;
+    justify-content: center;
     width: 100%;
     margin: 10px;
 }
 .logo {
-    width: 60px;
+    width: 3.75rem;
     background-size: cover;
     display: block;
-    margin-right: 20px;
+    margin-right: 1.25rem;
 }
 .content-container{
-    margin: 20px 18vw 50px 18vw;
-    padding: 0 0 10px 10px;
+    margin: 1.25rem 18vw 3.125rem 18vw;
+    padding: 0 0 0.5rem 0.625rem;
     border-top: 5px solid #d1fdfd;
     background: #f5f5f5;
-    scroll-margin-top: 80px;
+    scroll-margin-top: 5rem;
 }
 .info {
-    padding-right: 15px;
     display: flex;
     flex-direction: row;
+    padding: 0.25rem 0.5rem 0.25rem 0;
 }
 .info::before {
     content: "→";
-    margin-right: 8px;
+    margin-right: 0.5em;
 }
 #skills .info {
     display: flow;
@@ -47,46 +85,12 @@
 }
 h1, h2 {
     color: #016565;
-    margin: 10px 0 5px 0;
+    margin: 0.35em 0 0.35em 0;
     justify-self: left;
     text-transform: capitalize;
 }
 ul li {
     list-style-type: none;
-}
-.heading {
-    display: flex;
-    justify-content: center;
-}
-#navigation-top{
-    display: flex;
-    position:sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    justify-content: center;
-    background-color: #f5f5f5;
-    align-items: center;
-    padding: 10px 20px;
-    border-bottom: 5px solid #d1fdfd;
-    z-index: 1;
-}
-.nav-links{
-    display: flex;
-    gap: 1em;
-    list-style: none;
-    align-items: center;
-    text-transform: capitalize;
-}
-.link-item {
-    line-height: 20px;
-    border: transparent;
-    padding: 7px;
-}
-.link-item:hover{
-    border: 1px solid #982525;
-    border-radius: 5px;
-    background-color: #d1fdfd;
 }
 .grid-container {
     display: grid;
@@ -110,14 +114,14 @@ a:hover {
     color: #982525;
 }
 .social-link {
-    padding-right: 30px;
+    padding-right: 2em;
     display: inline;
 }
 .fa{
-    padding-right: 10px;
+    padding-right: 0.65em;
 }
 .paragraph{
-    padding: 0 10px 10px 0;
+    padding: 0 0.65em 0.65em 0;
 }
 
 @media screen and (max-width: 1800px) {
@@ -133,7 +137,7 @@ a:hover {
 @media screen and (max-width: 850px) {
     .social-link {
         display: block;
-        padding-bottom: 5px;
+        padding-bottom: 0.375em;
     }
 }
 @media screen and (max-width: 600px) {
@@ -141,23 +145,37 @@ a:hover {
         flex-direction: column;
         align-items: center;
         min-height: max-content;
-        padding: 15px 0;
+        padding: 0.625rem 0;
         display: flex;
         justify-content: flex-start;
     }
     .nav-links {
         flex-direction: column;
         align-items: center;
-        gap: 0;
+        gap: 0.5em;
     }
     .link-item {
+        font-size: 1em;
         margin-bottom: 0;
+        padding: 0.25em;
     }
     .logo {
         margin-bottom: 0.5em;
         margin-right: 0;
     }
     .content-container{
-        scroll-margin-top: calc(50vw);
+        margin: 1.25rem 15vw 3.15rem;
+        scroll-margin-top: calc(17em);
+    }
+    .info {
+        flex-wrap: wrap;
+    }
+    .one-exp {
+        padding-right: 1em;
+        padding-left: 1.4em;
+    }
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
