--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -15,12 +15,12 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    padding: 0.625rem 1.25rem;
     min-height: fit-content;
     justify-content: center;
     align-items: center;
     background-color: #f5f5f5;
     border-bottom: 5px solid #d1fdfd;
-    padding: 0.625rem 1.25rem;
     z-index: 1;
     overflow: hidden;
 }
@@ -39,14 +39,13 @@ body {
 }
 .link-item:hover{
     border: 1px solid #982525;
-    border-radius: 0.325px;
+    border-radius: 0.325rem;
     background-color: #d1fdfd;
 }
 .heading{
     display: flex;
     justify-content: center;
-    width: 100%;
-    margin: 10px;
+    margin: 1.25em;
 }
 .logo {
     width: 3.75rem;
@@ -155,9 +154,9 @@ a:hover {
         gap: 0.5em;
     }
     .link-item {
-        font-size: 1em;
         margin-bottom: 0;
         padding: 0.25em;
+        font-size: 1em;
     }
     .logo {
         margin-bottom: 0.5em;
@@ -165,7 +164,7 @@ a:hover {
     }
     .content-container{
         margin: 1.25rem 15vw 3.15rem;
-        scroll-margin-top: calc(17em);
+        scroll-margin-top: calc(16.35rem);
     }
     .info {
         flex-wrap: wrap;
