--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -71,10 +71,11 @@ body {
 }
 #skills .info {
     display: flow;
+    padding: 0.25rem 0;
 }
 .skills-list {
-    column-count: 2;
-    column-gap: 1em;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
 }
 .date {
     margin-left: 0;
@@ -122,6 +123,11 @@ a:hover {
 .paragraph{
     padding: 0 0.65em 0.65em 0;
 }
+.footer-credit{
+    background-color: #f5f5f5;
+    text-align: center;
+    padding-bottom: 0.2em;
+}
 
 @media screen and (max-width: 1800px) {
     .grid-container {
@@ -137,6 +143,10 @@ a:hover {
     .social-link {
         display: block;
         padding-bottom: 0.375em;
+    }
+    .skills-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
     }
 }
 @media screen and (max-width: 600px) {
@@ -176,5 +186,9 @@ a:hover {
     .grid-container {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+    .skills-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
     }
 }
